--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h3>Let</h3>
                         <p>Taste Natural </p>
+                        <p>Love it</p>
 
                     </div>
                 </div>
