--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                         <h3>Let</h3>
                         <p>Taste Natural </p>
                         <p>Love it</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, voluptatibus.</p>
 
                     </div>
                 </div>
